Fix pixel scaling
Sprites scaled to be blurry, fixed.

--- a/src/index.css
+++ b/src/index.css
@@ -179,6 +179,9 @@ body {
 .pokemon-main-image {
   width: 100%;
   height: auto;
+  image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
   /*max-width: 150px;
   border: 3px solid grey;
   padding: 3px;*/
